--- a/locale/no/mod-locales.cfg
+++ b/locale/no/mod-locales.cfg
@@ -218,11 +218,11 @@ custom-power-armor-mk5-grid-size-h=Custom's Elektrisk Rustning MK5 Høyde\nMin:0
 custom-power-armor-mk5-grid-size-w=Custom's Elektrisk Rustning MK5 Bredde\nMin:0\nMaks:500\nSpillets Normal:16\nModden's Normal:50\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
 # IndustrialRevolution3
-ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMax:10\nBase Default:2\nMod Default:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMax:10\nBase Default:4\nMod Default:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+ir3-light-cas-grid-size-h=IR3 Lett Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:4\nModden's Normal:8\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-light-cas-grid-size-w=IR3 Lett Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\nModden's Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
 
-ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMax:10\nBase Default:2\nMod Default:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMax:10\nBase Default:6\nMod Default:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
+ir3-heavy-cas-grid-size-h=IR3 Tung Rustning Høyde\nMin:0\nMaks:10\nSpillets Normal:6\nModden's Normal:10\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+ir3-heavy-cas-grid-size-w=IR3 Tung Rustning Bredde\nMin:0\nMaks:10\nSpillets Normal:2\nModden's Normal:2\n[color=red]Advarsel!!! Modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color] 
 
 # Power Armour mk3 
 cas-pamk3-lvest-inv-size=MK3's Lett Bruksvest\nMin:0\nMaks:500\nSpillets Normal:10\nModden's Normal:15
