--- a/locale/en/mod-locale.cfg
+++ b/locale/en/mod-locale.cfg
@@ -145,6 +145,8 @@ m-cas-8-a_mk8-inv-size=[item=a_mk8][color=#e00700]P.A.R's Power Armour MK8 Inv-B
 m-cas-9-a_mk9-inv-size=[item=a_mk9][color=#e00700]P.A.R's Power Armour MK9 Inv-B Size[/color]
 m-cas-10-a_mk10-inv-size=[item=a_mk10][color=#e00700]P.A.R's Power Armour MK10 Inv-B Size[/color]
 
+hard_science_required=[item=space-science-pack]Adding space science pack
+
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=[item=power-armor-mk3-armor-rampant-arsenal][color=#2cd240]Arsenal's Power Armour MK3 Inv-B Size[/color]
 
@@ -327,17 +329,18 @@ par-9-grid-size-w=P.A.R's Power Armours Mk9 Width\nMin:0\nMax:900\nBase Default:
 par-10-grid-size-h=P.A.R's Power Armours Mk10 Height\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 par-10-grid-size-w=P.A.R's Power Armours Mk10 Width\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-m-cas-1-a_mk1-inv-size=P.A.R's Power Armour MK1 Inv-B Size\nMin:0\nMax:500\nBase Default:50
-m-cas-2-a_mk2-inv-size=P.A.R's Power Armour MK2 Inv-B Size\nMin:0\nMax:1000\nBase Default:100
-m-cas-3-a_mk3-inv-size=P.A.R's Power Armour MK3 Inv-B Size\nMin:0\nMax:1500\nBase Default:150
-m-cas-4-a_mk4-inv-size=P.A.R's Power Armour MK4 Inv-B Size\nMin:0\nMax:2000\nBase Default:200
-m-cas-5-a_mk5-inv-size=P.A.R's Power Armour MK5 Inv-B Size\nMin:0\nMax:2500\nBase Default:250
-m-cas-6-a_mk6-inv-size=P.A.R's Power Armour MK6 Inv-B Size\nMin:0\nMax:3000\nBase Default:300
-m-cas-7-a_mk7-inv-size=P.A.R's Power Armour MK7 Inv-B Size\nMin:0\nMax:3500\nBase Default:350
-m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBase Default:400
-m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450
-m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500
+m-cas-1-a_mk1-inv-size=P.A.R's Power Armour MK1 Inv-B Size\nMin:0\nMax:500\nBase Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-2-a_mk2-inv-size=P.A.R's Power Armour MK2 Inv-B Size\nMin:0\nMax:1000\nBase Default:100\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-3-a_mk3-inv-size=P.A.R's Power Armour MK3 Inv-B Size\nMin:0\nMax:1500\nBase Default:150\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-4-a_mk4-inv-size=P.A.R's Power Armour MK4 Inv-B Size\nMin:0\nMax:2000\nBase Default:200\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-5-a_mk5-inv-size=P.A.R's Power Armour MK5 Inv-B Size\nMin:0\nMax:2500\nBase Default:250\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-6-a_mk6-inv-size=P.A.R's Power Armour MK6 Inv-B Size\nMin:0\nMax:3000\nBase Default:300\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-7-a_mk7-inv-size=P.A.R's Power Armour MK7 Inv-B Size\nMin:0\nMax:3500\nBase Default:350\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-8-a_mk8-inv-size=P.A.R's Power Armour MK8 Inv-B Size\nMin:0\nMax:4000\nBase Default:400\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-9-a_mk9-inv-size=P.A.R's Power Armour MK9 Inv-B Size\nMin:0\nMax:4500\nBase Default:450\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+m-cas-10-a_mk10-inv-size=P.A.R's Power Armour MK10 Inv-B Size\nMin:0\nMax:5000\nBase Default:500\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+hard_science_required= Adding space science packs to tech from MK6 --> MK10
 
 # Rampant Arsenal
 cas-ra-power-armor-mk3-armor-rampant-arsenal-inv-size=R.A Power Armour MK3\nMin:0\nMax:1500\nBase Default:60
